# ir-insect

./: .gitignore  README.md  camera.py  gui.py  img_processor.py  main.py  pwm.py  pyproject.toml
utils/: colors.py  fonts.py
